<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="animations2Sample"
            type="com.ministren.material_animations.model.Sample" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AnimationsActivity1">

        <include layout="@layout/toolbar" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/animations2_root_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:id="@+id/scene_root"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/color_blank"
                tools:layout_height="100dp" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/buttons_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/scene_root">

                <Button
                    android:id="@+id/btn_scene_1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/activity_animations2_btn_scene_1"
                    app:layout_constraintEnd_toStartOf="@+id/btn_scene_2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_scene_2"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/activity_animations2_btn_scene_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_scene_1"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_scene_3"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/activity_animations2_btn_scene_3"
                    app:layout_constraintEnd_toStartOf="@+id/btn_scene_4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_scene_1" />

                <Button
                    android:id="@+id/btn_scene_4"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/activity_animations2_btn_scene_4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_scene_3"
                    app:layout_constraintTop_toBottomOf="@+id/btn_scene_2" />

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>
